<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="outdoor_panel_title">outdoor device</string>
    <string name="outdoor_device_control">device control</string>
    <string name="outdoor_network_api">interface debug</string>
    <string name="outdoor_inductive_unlock">inductive unlock</string>
    <string name="outdoor_device_remove">device remove</string>

    <string name="device_mgt_module_title">DEVICE MANAGEMENT</string>
    <string name="device_mgt_list">Device List</string>
    <string name="group_type_title">Group Type</string>
    <string name="group_device_list_title">Device List</string>
    <string name="group_list_title">Group List</string>
    <string name="group_control_title">Group List</string>
    <string name="group_add_device_title">Add Device</string>

    <string name="device_zb_gateway_list">Zigbee Gateway List</string>
    <string name="device_ble_mesh_sub_device_list">BLE Mesh sub device list</string>
    <string name="device_zb_sub_device_list">Subdevice List</string>

    <string name="group_list">Group List</string>
    <string name="group_management">Group Management</string>
    <string name="device_mgt_online">Online</string>
    <string name="device_mgt_offline">Offline</string>
    <string name="device_mgt_control">Device Control</string>
    <string name="device_mgt_remove">Remove</string>
    <string name="device_mgt_reset">Reset Factory</string>

    <string name="group_type_mesh">Mesh Group</string>
    <string name="group_type_zigbee">ZigBee Group</string>
    <string name="menu_group_add_group">Add Group</string>
    <string name="group_add_device">Add Device</string>
    <string name="menu_group_rename">Rename</string>
    <string name="menu_group_disband">Disband</string>
    <string name="group_name">Group name</string>
    <string name="group_select_devices">Select devices</string>
    <string name="group_add_select_device_to_group">Add devices</string>
    <string name="group_create">Create Group</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">confirm</string>
    <string name="local_id_tips">Please set localId,Values range from c000-feff in hexadecimal</string>
    <string name="create_group_tips">Please select the device available</string>
    <string name="group_control_menu_title">control</string>
    <string name="group_dialog_rename_title">rename</string>
    <string name="group_dialog_rename_btn">OK</string>
    <string name="group_dialog_remove_device_title">remove device</string>
    <string name="group_dialog_remove_device_btn">OK</string>
    <string name="group_control">Device Control</string>
    <string name="group_create_success_msg">create group success</string>
    <string name="cannot_select_offline_device">Offline device cannot be selected</string>
    <string name="cannot_select_wifi_device">Wifi-device cannot be selected</string>
    <string name="cannot_select_different_pcc_device">Only the same pcc device can be selected.</string>
    <string name="please_wait_for_a_minute">please wait for a minute</string>

    <string name="bluetooth_offline">bluetooth offline</string>
    <string name="not_support_inductive_unlock">not support inductive unlock</string>
    <string name="inductive_unlock_type">inductive unlock type</string>
    <string name="inductive_unlock_switch">inductive unlock switch</string>
    <string name="inductive_unlock_hid_bind">hid_bind</string>
    <string name="turn_on_inductive_unlock">turn on inductive unlock</string>
    <string name="turn_off_inductive_unlock">turn off inductive unlock</string>
    <string name="record_fortify_distance">record fortify distance</string>
    <string name="record_disarm_distance">record disarm distance</string>
    <string name="inductive_unlock_distance">inductive unlock distance</string>
    <string name="publish_record_fortify_distance_success">publish record fortify distance dp success</string>
    <string name="publish_record_disarm_distance_success">publish record disarm distance dp success</string>
    <string name="bt_unlock_pair_group_limit">The device local binding has exceeded the limit, please contact the main user</string>
    <string name="bt_unlock_pair_error_dialog_hint">Pairing failed, please restart pairing</string>
    <string name="bt_unlock_pair_cancel_dialog_hint">Cancel pairing, please restart pairing</string>
    <string name="bt_unlock_pair_remove_bt_bond_hint">Please go to the system Bluetooth settings to cancel the %s device pairing</string>
    <string name="bt_unlock_pair_local_info_none_hint">The pairing information is not found, please re-enable the induction unlock</string>
    <string name="bt_unlock_manual_pair">Please go to the system to manually select the %s device for pairing and connection</string>
    <string name="action_ok">action_ok</string>
    <string name="action_to_setting">action_to_setting</string>
    <string name="remove_bonded_tip">Tip</string>
    <string name="remove_bonded_hint">The device has turned on inductive unlock, please connect the device first to unbind it.</string>
</resources>