<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:orientation="vertical"
    tools:parentTag="LinearLayout">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inductive_unlock_hid_bind"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_hid_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:textSize="14sp"
            tools:text="bind" />

    </FrameLayout>

    <TextView
        android:id="@+id/btn_record_fortify_distance"
        style="@style/Item"
        android:text="@string/record_fortify_distance" />

    <TextView
        android:id="@+id/btn_record_disarm_distance"
        style="@style/Item"
        android:text="@string/record_disarm_distance" />

</merge>