<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/outdoor_panel_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvDeviceControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_border_bg"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/outdoor_device_control"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvNetworkApi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/shape_border_bg"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/outdoor_network_api"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>